--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+@import "../assets/color.css";
+@import "../assets/font.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +8,20 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --HEADER-HEIGHT: 50px;
+  --FOOTER-HEIGHT: 50px;
+  --NAVIGATION-HEIGHT: 50px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+
+  box-sizing: border-box;
+
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 400;
 }
 
 @media (prefers-color-scheme: dark) {
