--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,23 @@
 @tailwind components;
 @tailwind utilities;
 
+/* tailwindcss preflight */
+h1 {
+  @apply text-6xl;
+}
+h2 {
+  @apply text-4xl;
+}
+h3 {
+  @apply text-xl;
+}
+h4 {
+  @apply text-lg;
+}
+a {
+  @apply text-blue-600 underline;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -22,6 +39,11 @@
 
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
