--- a/components/organisms/todo/TodoList.module.css
+++ b/components/organisms/todo/TodoList.module.css
@@ -1,8 +1,8 @@
 .todoListWrapper {
-  @apply flex flex-col items-center gap-4;
+  @apply flex flex-row items-center gap-4;
 }
 
 .todoList {
-  @apply flex flex-col flex-1 gap-8 rounded-md p-3 min-w-[200px] w-[500px] min-h-[400px] max-h-[50vh] bg-slate-400 overflow-auto overflow-scroll [&::-webkit-scrollbar]:hidden;
+  @apply flex flex-col flex-1 gap-8 rounded-md p-3 min-w-[200px] w-[500px] h-[60vh] bg-slate-400 overflow-auto overflow-scroll [&::-webkit-scrollbar]:hidden;
   color: rgba(30, 30, 30, 0.8);
 }
