--- a/components/templates/TodoTemplate.module.css
+++ b/components/templates/TodoTemplate.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply flex flex-col items-center w-full flex-1 gap-12 overflow-auto;
+  @apply flex flex-col items-center w-full gap-12 overflow-auto;
 }
 
 .columns {
