--- a/components/organisms/todo/TodoCard.module.css
+++ b/components/organisms/todo/TodoCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  @apply flex flex-col items-center gap-3 rounded-md p-3 my-2 border bg-white shadow-md hover:cursor-pointer;
+  @apply flex flex-col items-center gap-3 rounded-md p-3 my-2 border shadow-md hover:cursor-pointer;
 }
 
 .done {
